environment settings added

--- a/notebooks/base.ipynb
+++ b/notebooks/base.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "75d8eb5c",
+   "metadata": {},
+   "source": [
+    "# Import"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "74a0645a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/darwindiaz/Documents/Programming/Data Analytics/Projects/translations/venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import os\n",
@@ -15,12 +32,52 @@
     "from transformers import pipeline\n",
     "\n",
     "# Load model directly\n",
-    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM"
+    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "e855486d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
+    "from src.load.environment import Environment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd8a0a8b",
+   "metadata": {},
+   "source": [
+    "# Environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "04c53e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = Environment(dotenv_path=\"../conf/secrets/.env\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "460d6b58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HF_TOKEN = env.get(name=\"HF_TOKEN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "7184ef48",
    "metadata": {},
    "outputs": [],
@@ -30,23 +87,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a6543ce1",
    "metadata": {},
    "outputs": [],
    "source": [
     "client = InferenceClient(\n",
     "    provider=\"hf-inference\",\n",
-    "    api_key=\"XXXX\",\n",
+    "    api_key=HF_TOKEN,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7dfe3085",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/darwindiaz/Documents/Programming/Data Analytics/Projects/translations/venv/lib/python3.9/site-packages/transformers/models/marian/tokenization_marian.py:175: UserWarning: Recommended: pip install sacremoses.\n",
+      "  warnings.warn(\"Recommended: pip install sacremoses.\")\n",
+      "/Users/darwindiaz/Documents/Programming/Data Analytics/Projects/translations/venv/lib/python3.9/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(hf_model)\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(hf_model)"
@@ -78,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1034d654",
+   "id": "c4bbd251",
    "metadata": {},
    "outputs": [],
    "source": []
